tests/invalid-use/two_lifetimes_on_dependant.rs
use zc::Dependant;

#[derive(Dependant)]
pub struct MyStruct<'a, 'b>(&'a (), &'b ());

fn main() {}
